--- a/src/styles/scss/_vars.scss
+++ b/src/styles/scss/_vars.scss
@@ -12,6 +12,7 @@ $grey-background: #666666;
 $background: #2c3333;
 $white-70: rgba(255, 255, 255, 0.7);
 $background-grey-dark: #192020;
+$black-40: rgba(0, 0, 0, 0.4);
 
 /* FONTS */
 
