--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -514,5 +514,26 @@ a {
   line-height: 29px;
 }
 .earcandy__company-name {
-  color: #000000;
+  color: #f58e49;
+}
+
+.scroll-btn {
+  background-color: #666666;
+  position: fixed;
+  bottom: 50px;
+  right: 10px;
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  display: none;
+  place-items: center;
+}
+.scroll-btn__arrow {
+  padding: 8px 8px;
+  height: calc(100% - 15px);
+  width: calc(100% - 15px);
+  background-color: #2c3333;
+  border-radius: 50%;
 }
